# qaiosplus

./: .gitignore  CITADEL_TASKFLOW.md  CITADEL_TASKFLOW_TODO.md  CITADEL_UI_RUNTIME.md  CITADEL_UI_TODO.md  CMakeLists.txt  DO_THIS_FIRST_TODO.md  LOG_DOC.md  MD_REVIEW_SUMMARY.md  README.md  Standards.md  TODO_MAIN.md  TODO_S_LIST.md  build.sh  christmasdsktop.json  desktop.json  desktopAutum.json  desktopStandard.json  desktopWinter.json  desktopsummer.json  jsonFunctionGen.md  jsonFunctionTemplate.md  limine.cfg  sprintdesktop.json  startup.cfg
QArch/: CMakeLists.txt
QArch/include/: QArchCPU.h  QArchGDT.h  QArchIDT.h  QArchPCI.h  QArchPort.h
QArch/src/: QArchCPU.cpp  QArchGDT.cpp  QArchIDT.cpp  QArchPCI.cpp  QArchPort.asm
QCCore/: CMakeLists.txt
QCMath/: CMakeLists.txt
QCSerialization/: CMakeLists.txt
QCommand/: CMakeLists.txt
QCommon/: CMakeLists.txt
QDesktop/: CMakeLists.txt  TODO_README.md
QDesktop/include/: QDAccent.h  QDColorUtils.h  QDCommandMessages.h  QDCommandProcessor.h  QDDesktop.h  QDLoginDialog.h  QDSetupWizard.h  QDShutdownDialog.h  QDTerminal.h  QDTheme.h
QDesktop/src/: QDAccent.cpp  QDCommandProcessor.cpp  QDDesktop.cpp  QDLoginDialog.cpp  QDSetupWizard.cpp  QDShutdownDialog.cpp  QDTerminal.cpp  QDTheme.cpp
QDrivers/: CMakeLists.txt
QEvent/: CMakeLists.txt
QFileSystem/: CMakeLists.txt
QFileSystem/include/: QFSCache.h  QFSDirectory.h  QFSFAT16.h  QFSFAT32.h  QFSFATProbe.h  QFSFile.h  QFSPath.h  QFSVFS.h  QFSVolumeManager.h
QFileSystem/src/: QFSCache.cpp  QFSDirectory.cpp  QFSFAT16.cpp  QFSFAT32.cpp  QFSFATProbe.cpp  QFSFile.cpp  QFSPath.cpp  QFSVFS.cpp  QFSVolumeManager.cpp
QGraphics/: CMakeLists.txt
QGraphics/include/: QGBrush.h  QGGraphicsBackend.h  QGPainter.h  QGPen.h
QGraphics/include/QG/: CameraRH.h  Image.h  PainterSurface.h
QGraphics/src/QG/: Image.cpp  PainterSurface.cpp
QKMemory/: CMakeLists.txt
QKMemory/include/: QKMemHeap.h  QKMemPMM.h  QKMemPaging.h  QKMemTranslator.h  QKMemVMM.h
QKMemory/src/: QKMemHeap.cpp  QKMemPMM.cpp  QKMemPaging.cpp  QKMemTranslator.cpp  QKMemVMM.cpp
QKernel/: CMakeLists.txt
QKernel/include/: QKCommandCenter.h  QKEntropy.h  QKInterrupts.h  QKKernel.h  QKScheduler.h  QKSecureStore.h  QKSecurityCenter.h  QKShutdownController.h  QKTaskManager.h
QKernel/src/: QKCommandCenter.cpp  QKEntropy.cpp  QKInterrupts.cpp  QKKernel.cpp  QKScheduler.cpp  QKSecureStore.cpp  QKSecurityCenter.cpp  QKShutdownController.cpp  QKTaskManager.cpp
QNetwork/: CMakeLists.txt
QNetwork/include/: QNetEthernet.h  QNetIP.h  QNetSocket.h  QNetStack.h  QNetTCP.h  QNetUDP.h
QNetwork/src/: QNetEthernet.cpp  QNetIP.cpp  QNetSocket.cpp  QNetStack.cpp  QNetTCP.cpp  QNetUDP.cpp
QPR/: CMakeLists.txt
QQuantum/: CMakeLists.txt
QUICommon/: CMakeLists.txt
QWControls/: CMakeLists.txt
QWControls/include/: QWCtrlBase.h  QWCtrlButton.h  QWCtrlComboBox.h  QWCtrlContainer.h  QWCtrlFrame.h  QWCtrlLabel.h  QWCtrlListView.h  QWCtrlPanel.h  QWCtrlScrollBar.h  QWCtrlTextBox.h
QWControls/include/QWControls/Base/: ControlBase.h
QWControls/include/QWControls/Composite/: ComboBox.h  ListView.h
QWControls/include/QWControls/Containers/: Container.h  Frame.h  Panel.h
QWControls/include/QWControls/Leaf/: Button.h  ImageView.h  Label.h  ScrollBar.h  TextBox.h
QWControls/src/: QWCtrlBase.cpp  QWCtrlButton.cpp  QWCtrlComboBox.cpp  QWCtrlContainer.cpp  QWCtrlFrame.cpp  QWCtrlLabel.cpp  QWCtrlListView.cpp  QWCtrlPanel.cpp  QWCtrlScrollBar.cpp  QWCtrlTextBox.cpp
QWControls/src/Base/: ControlBase.cpp
QWControls/src/Composite/: ComboBox.cpp  ListView.cpp
QWControls/src/Containers/: Container.cpp  Frame.cpp  Panel.cpp
QWControls/src/Leaf/: Button.cpp  ImageView.cpp  Label.cpp  ScrollBar.cpp  TextBox.cpp
QWInterfaces/: CMakeLists.txt
QWindowing/: CMakeLists.txt
QWindowing/docs/: QWStyleRendererPlan.md
QWindowing/include/: QWCompositor.h  QWFramebuffer.h  QWFramebufferBackend.h  QWFramebufferPresentBackend.h  QWMessageBus.h  QWPaintContext.h  QWPresentBackend.h  QWRenderer.h  QWStyleRenderer.h  QWStyleSystem.h  QWStyleTypes.h  QWSurfaceBackend.h  QWVmwareSVGAPresentBackend.h  QWWindow.h  QWWindowManager.h
QWindowing/src/: QWCompositor.cpp  QWFramebuffer.cpp  QWFramebufferBackend.cpp  QWFramebufferPresentBackend.cpp  QWMessageBus.cpp  QWRenderer.cpp  QWStyleRenderer.cpp  QWStyleSystem.cpp  QWStyleTypes.cpp  QWSurfaceBackend.cpp  QWVmwareSVGAPresentBackend.cpp  QWWindow.cpp  QWWindowManager.cpp
Shared/: 2026-02-16_security-ui_backup.md  HELLO.TXT
XHCI/: hardware_cursor.cpp  hardware_cursor.h  xhci.h  xhci_common.h
backups/: 2026-02-19_backup_summary.md  2026-02-25_backup_summary.md
iso/: limine.conf
kernel/: CMakeLists.txt  QKBoot.asm  QKConsole.cpp  QKConsole.h  QKMain.cpp  limine_boot.h  linker.ld
kernel/Boot/: QKBoot.cpp  QKBoot.h
kernel/Boot/Acpi/: AcpiTables.cpp  AcpiTables.h
kernel/Boot/Arch/: ArchInit.cpp  ArchInit.h
kernel/Boot/Config/: StartupConfig.cpp  StartupConfig.h
kernel/Boot/Desktop/: DesktopSession.cpp  DesktopSession.h
kernel/Boot/Limine/: LimineModules.cpp  LimineModules.h  LimineRequests.cpp  LimineRequests.h
kernel/Boot/Memory/: AddressMapping.cpp  AddressMapping.h  EarlyMemory.cpp  EarlyMemory.h
kernel/Boot/Ramdisk/: RamdiskMount.cpp  RamdiskMount.h
kernel/Boot/Tpm/: TpmSecureStore.cpp  TpmSecureStore.h
kernel/Debug/: Panic.cpp  Panic.h
kernel/Debug/Serial/: SerialDebug.cpp  SerialDebug.h
kernel/Debug/Terminal/: LimineTerminal.cpp  LimineTerminal.h
kernel/drivers/: CMakeLists.txt  QKDrvBase.h  QKDrvManager.cpp  QKDrvManager.h  QKMemoryBlockDevice.h  QKStorageProbe.cpp  QKStorageProbe.h  QKStorageRegistry.cpp  QKStorageRegistry.h
kernel/drivers/E1000/: CMakeLists.txt  QKDrvE1000.cpp  QKDrvE1000.h
kernel/drivers/IDE/: QKDrvIDE.cpp  QKDrvIDE.h
kernel/drivers/PS2/: CMakeLists.txt  QKDrvPS2Keyboard.cpp  QKDrvPS2Keyboard.h  QKDrvPS2Mouse.cpp  QKDrvPS2Mouse.h
kernel/drivers/UHCI/: CMakeLists.txt  QKDrvUHCI.cpp  QKDrvUHCI.h
kernel/drivers/XHCI/: CMakeLists.txt  QKDrvXHCI.cpp  QKDrvXHCI.h  xhci.h  xhci_context.h  xhci_internal.h  xhci_regs.h  xhci_trb.h
(+52 files in other folders)
